--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -31,6 +32,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-popup-dialog": "^0.16.4",
     "typescript": "~4.3.5"
   },
   "private": true
