--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
         "slug": "NasaApiProject",
         "version": "1.0.0",
         "orientation": "portrait",
-        "icon": "./assets/icon.png",
+        "icon": "./assets/index.png",
         "splash": {
             "image": "./assets/splash.png",
             "resizeMode": "contain",
