--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
         "slug": "NasaApiProject",
         "version": "1.0.0",
         "orientation": "portrait",
-        "icon": "./assets/index.png",
+        "icon": "./assets/spaceIcon.png",
         "splash": {
             "image": "./assets/splash.png",
             "resizeMode": "contain",
@@ -21,7 +21,7 @@
         },
         "android": {
             "adaptiveIcon": {
-                "foregroundImage": "./assets/adaptive-icon.png",
+                "foregroundImage": "./assets/spaceIcon.png",
                 "backgroundColor": "#FFFFFF"
             },
             "package": "com.nasaApi.project"
